Fix for Bug #8753 Invalid schema object version after dropping index