sql/ha_ndbcluster.cc
@@ -328,6 +328,36 @@ void ha_ndbcluster::no_uncommitted_rows_reset(THD *thd)
     #   The mapped error code
 */
 
+void ha_ndbcluster::invalidateCache()
+{
+  NDBDICT *dict= get_ndb()->getDictionary();
+  DBUG_PRINT("info", ("invalidating %s", m_tabname));
+  dict->invalidateTable(m_tabname);
+  table->version=0L;			/* Free when thread is ready */
+  /* Invalidate indexes */
+  for (uint i= 0; i < table->keys; i++)
+  {
+    NDBINDEX *index = (NDBINDEX *) m_index[i].index;
+    NDBINDEX *unique_index = (NDBINDEX *) m_index[i].unique_index;
+    NDB_INDEX_TYPE idx_type= m_index[i].type;
+
+    
+    switch(m_index[i].type) {
+    case(PRIMARY_KEY_ORDERED_INDEX):
+    case(ORDERED_INDEX):
+      dict->invalidateIndex(index->getName(), m_tabname);
+      break;      
+    case(UNIQUE_ORDERED_INDEX):
+      dict->invalidateIndex(index->getName(), m_tabname);
+    case(UNIQUE_INDEX):
+      dict->invalidateIndex(unique_index->getName(), m_tabname);
+      break;
+    case(PRIMARY_KEY_INDEX):
+    case(UNDEFINED_INDEX):
+      break;
+    }
+  }
+}
 
 int ha_ndbcluster::ndb_err(NdbConnection *trans)
 {
@@ -339,11 +369,7 @@ int ha_ndbcluster::ndb_err(NdbConnection *trans)
   switch (err.classification) {
   case NdbError::SchemaError:
   {
-    Ndb *ndb= get_ndb();
-    NDBDICT *dict= ndb->getDictionary();
-    DBUG_PRINT("info", ("invalidateTable %s", m_tabname));
-    dict->invalidateTable(m_tabname);
-    table->version=0L;			/* Free when thread is ready */
+    invalidateCache();
     break;
   }
   default:
@@ -733,7 +759,7 @@ int ha_ndbcluster::get_metadata(const char *path)
       if (!invalidating_ndb_table)
       {
 	DBUG_PRINT("info", ("Invalidating table"));
-	dict->invalidateTable(m_tabname);
+        invalidateCache();
 	invalidating_ndb_table= TRUE;
       }
       else
